[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/LPC Base Assets/sprites/monsters/slime.png" type="Texture" id=1]
[ext_resource path="res://Slime.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=8]
radius = 11.1803

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id=10]
radius = 190.011

[sub_resource type="Animation" id=12]
resource_name = "Move_Down"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_move"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Move_right"
length = 0.3

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, -6 )
shape = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 9 )

[node name="Player_detector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detector"]
shape = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Move_Down"
anims/Move_Down = SubResource( 12 )
anims/Move_right = SubResource( 11 )
anims/RESET = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -8 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4
frame = 3

[node name="Change_direction_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Player_detector" to="." method="_on_Player_detector_body_entered"]
[connection signal="body_exited" from="Player_detector" to="." method="_on_Player_detector_body_exited"]
[connection signal="timeout" from="Change_direction_timer" to="." method="_on_Change_direction_timer_timeout"]
